--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
 body {
   background-color: black;
 }
-canvas{
-  scale(1);
-
-}
+/*#canvas{
+    position:fixed;
+    left:0px;
+    top:0px;
+    width:100%;
+    height:100%;
+}*/
