--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,22 @@
 body {
   background-color: black;
 }
+
+
 #canvas{
     position:fixed;
     left:0px;
     top:0px;
     width:100%;
     height:100%;
+}
+#transition{
+  pointer-events: none;
+  background-color: black;
+  opacity: 0;
+  position:fixed;
+  left:0px;
+  top:0px;
+  width:100%;
+  height:100%;
 }
