--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,36 @@ body {
   width:100%;
   height:100%;
 }
+#battleMenu{
+  background-color: white;
+  width: 100%;
+  height: 20%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border: 4px black;
+  border-style: solid none;
+  display: flex;
+}
+
+button {
+  border: 0;
+}
+button:hover{
+  background-color: gainsboro;
+}
+
+#attacks{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 70%
+}
+
+#type{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30%;
+  border-left: 4px black solid;
+}
